--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-   <link rel="shortcut icon" href="/dist/co.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/dist/co.svg" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevFr@cdr</title>
   </head>
